--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1733,7 +1733,7 @@ h3 {
   margin-left: -1.5rem;
 
   @media (min-width:2000px) {
-    margin-right: 30rem;
+    margin-right: 38rem;
   }
 
 
@@ -1741,6 +1741,11 @@ h3 {
 #medic .socials a:hover {
   background-color: #6366F1;
 }
+}
+@media (min-width:2000px) {
+  .map {
+    padding-left: 15rem;
+  }
 }
 
 footer {
@@ -1942,7 +1947,7 @@ footer .container {
   background-color: var(--color-bg-100-dark);
 }
 .dark #contact .consultation-form {
-  background-color: var(--color-form-dark) !important;
+  background-color: #2E2F40 !important;
 }
 
 .dark #contact .consultation-form .form-group input, .dark #contact .consultation-form .form-group select {
